--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@verdaccio/eslint-config": "0.0.1",
     "@verdaccio/types": "6.0.2",
     "cross-env": "5.2.0",
+    "eslint": "5.16.0",
     "husky": "0.14.3",
     "jest": "24.5.0",
     "typescript": "3.2.1"
