--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "release": "standard-version -a -s",
     "pretest": "npm run lint",
     "test": "jest",
+    "precommit": "lint-staged",
     "format": "prettier --single-quote --trailing-comma none --write \"{src,test}/**/*.ts\"",
     "lint": "eslint . --ext .js,.ts",
     "commitmsg": "commitlint -e $GIT_PARAMS",
@@ -36,6 +37,7 @@
     "@verdaccio/types": "6.0.2",
     "cross-env": "5.2.0",
     "eslint": "5.16.0",
+    "lint-staged": "7.2.0",
     "husky": "0.14.3",
     "jest": "24.5.0",
     "typescript": "3.2.1"
@@ -43,6 +45,13 @@
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "*.{js, json}": [
+      "eslint .",
+      "prettier --write",
+      "git add"
     ]
   },
   "keywords": [],
