--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint . --ext .js,.ts",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "type-check": "tsc --noEmit",
+    "coverage:publish": "codecov",
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
@@ -36,6 +37,7 @@
     "@verdaccio/eslint-config": "0.0.1",
     "@verdaccio/types": "6.0.2",
     "cross-env": "5.2.0",
+    "codecov": "3.2.0",
     "eslint": "5.16.0",
     "lint-staged": "8.1.5",
     "husky": "0.14.3",
