--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,8 @@
     "@verdaccio"
   ],
   "rules": {
-    "@typescript-eslint/no-var-requires": ["warn"]
+    "@typescript-eslint/no-var-requires": ["warn"],
+    "@typescript-eslint/explicit-function-return-type": [0],
+    "max-len": [0]
   }
 }
