--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "dependencies": {
     "dompurify": "1.0.10",
     "jsdom": "15.1.0",
-    "marked": "0.6.2",
-    "sanitize-html": "1.20.1"
+    "marked": "0.6.2"
   },
   "devDependencies": {
     "@commitlint/cli": "7.5.2",
