--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "@verdaccio/babel-preset": "0.1.0",
     "@verdaccio/eslint-config": "0.0.1",
     "@verdaccio/types": "6.0.2",
-    "cross-env": "5.2.0",
     "codecov": "3.2.0",
+    "cross-env": "5.2.0",
     "eslint": "5.16.0",
-    "lint-staged": "8.1.5",
     "husky": "0.14.3",
     "jest": "24.5.0",
+    "lint-staged": "8.1.5",
+    "standard-version": "6.0.1",
     "typescript": "3.2.1"
   },
   "commitlint": {
@@ -55,6 +56,10 @@
       "git add"
     ]
   },
-  "keywords": ["verdaccio", "readme", "markdown"],
+  "keywords": [
+    "verdaccio",
+    "readme",
+    "markdown"
+  ],
   "license": "MIT"
 }
