--- a/package.json
+++ b/package.json
@@ -20,29 +20,29 @@
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src/ --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
+    "build:js": "babel src/ --out-dir lib --extensions \".ts,.tsx\""
   },
   "dependencies": {
-    "dompurify": "1.0.10",
-    "jsdom": "15.1.0",
+    "dompurify": "1.0.11",
+    "jsdom": "15.1.1",
     "marked": "0.6.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "7.5.2",
-    "@commitlint/config-conventional": "7.5.0",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.13.8",
-    "@verdaccio/babel-preset": "0.1.0",
+    "@commitlint/cli": "8.0.0",
+    "@commitlint/config-conventional": "8.0.0",
+    "@types/jest": "24.0.15",
+    "@types/node": "12.0.10",
+    "@verdaccio/babel-preset": "0.2.1",
     "@verdaccio/eslint-config": "0.0.1",
     "@verdaccio/types": "6.0.2",
-    "codecov": "3.2.0",
+    "codecov": "3.5.0",
     "cross-env": "5.2.0",
     "eslint": "5.16.0",
     "husky": "0.14.3",
-    "jest": "24.5.0",
-    "lint-staged": "8.1.5",
+    "jest": "24.8.0",
+    "lint-staged": "8.2.1",
     "standard-version": "6.0.1",
-    "typescript": "3.2.1"
+    "typescript": "3.5.2"
   },
   "commitlint": {
     "extends": [
@@ -50,7 +50,7 @@
     ]
   },
   "lint-staged": {
-    "*.{js, json}": [
+    "*.{ts, json}": [
       "eslint .",
       "prettier --write",
       "git add"
